finish activity log

--- a/src/plugins/ucdlib-awards/views/admin/pages/logs.twig
+++ b/src/plugins/ucdlib-awards/views/admin/pages/logs.twig
@@ -4,6 +4,7 @@
     <ucdlib-awards-forbidden></ucdlib-awards-forbidden>
   {% endif %}
   <div>
+    <h3 class="page-subtitle">Activity Log</h3>
     <div class="l-2col l-2col--67-33">
       <div class="l-second panel o-box">
         <ucdlib-awards-logs-filter>
