--- a/src/plugins/ucdlib-awards/views/admin/pages/applicants.twig
+++ b/src/plugins/ucdlib-awards/views/admin/pages/applicants.twig
@@ -1,5 +1,8 @@
 <ucdlib-awards-page>
   <script type="application/json"> {{pageContainerProps|json_encode()}}</script>
+  <ucdlib-awards-applicants-ctl>
+    <script type="application/json"> {{pageProps|json_encode()}}</script>
+  </ucdlib-awards-applicants-ctl>
   {% if not currentUser.isAdmin %}
     <ucdlib-awards-forbidden></ucdlib-awards-forbidden>
   {% endif %}
