--- a/src/plugins/ucdlib-awards/views/evaluation/pages/evaluation.twig
+++ b/src/plugins/ucdlib-awards/views/evaluation/pages/evaluation.twig
@@ -14,5 +14,8 @@
     html.wp-toolbar {
       display: none;
     }
+    ucdlib-awards-page {
+      min-height: calc(100vh - 4rem);
+    }
   </style>
 {% endif %}
