more letters of support;

--- a/src/plugins/ucdlib-awards/views/evaluation/application.twig
+++ b/src/plugins/ucdlib-awards/views/evaluation/application.twig
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>{{award.getTitle}} Application</h1>
-{{ evalMacros.renderApplicant(applicant, cycleId) }}
+{{ evalMacros.renderApplicant(applicant, cycle) }}
 </body>
 </html>
 {% endapply %}
