--- a/src/plugins/ucdlib-awards/views/evaluation/applications.twig
+++ b/src/plugins/ucdlib-awards/views/evaluation/applications.twig
@@ -4,6 +4,7 @@
 <html>
 <head>
   <title>{{award.getTitle}} Applications</title>
+  <meta charset="UTF-8">
   {{ evalMacros.renderStyles() }}
 </head>
 <body>
