--- a/src/plugins/ucdlib-awards/views/evaluation/application.twig
+++ b/src/plugins/ucdlib-awards/views/evaluation/application.twig
@@ -4,6 +4,7 @@
 <html>
 <head>
   <title>{{award.getTitle}} Application - {{applicant.name}}</title>
+  <meta charset="UTF-8">
   {{ evalMacros.renderStyles() }}
 </head>
 <body>
